# Ishiiruka

./: CMakeLists.txt
Source/: Dolphin.sln
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: CMakeLists.txt  Mixer.cpp  Mixer.h
Source/Core/Common/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  MsgHandler.h  QoSSession.h  StringUtil.cpp  Swap.h  x64CPUDetect.cpp
Source/Core/Common/Config/: Config.h
Source/Core/Common/GL/GLInterface/: WGL.cpp
Source/Core/Core/: CMakeLists.txt  ConfigManager.h  Core.cpp  Core.h  State.cpp  State.h  WiiRoot.cpp
Source/Core/Core/HW/EXI/: EXI_DeviceEthernet.h
Source/Core/Core/HW/WiimoteReal/: IOWin.h
Source/Core/DolphinLibretro/: Boot.cpp  CMakeLists.txt  DolphinLibretro.vcxproj  Host.cpp  Input.cpp  Input.h  Log.cpp  Log.h  Main.cpp  Options.cpp  Options.h  Video.cpp  Video.h  Vulkan.cpp
Source/Core/InputCommon/: CMakeLists.txt
Source/Core/VideoBackends/D3D12/: CMakeLists.txt  D3DBase.cpp  D3DBase.h  NativeVertexFormat.cpp
Source/Core/VideoBackends/DX11/: D3DBase.cpp  D3DBase.h  D3DState.cpp  D3DState.h  Render.cpp  Render.h  main.cpp
Source/Core/VideoBackends/DX9/: CMakeLists.txt  D3DTexture.h  Render.cpp
Source/Core/VideoBackends/OGL/: PostProcessing.cpp  Render.cpp  Render.h
Source/Core/VideoBackends/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanLoader.h  main.cpp
Source/Core/VideoCommon/: CMakeLists.txt  Fifo.cpp  Fifo.h  MainBase.cpp  RenderBase.h  VertexLoaderManager.cpp  VertexLoaderManager.h  VideoBackendBase.h  VideoCommon.h
Source/VSProps/: Base.props
